dev: security groups

--- a/02-ec2.md
+++ b/02-ec2.md
@@ -2,3 +2,141 @@
 
 [aws budget setup](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26098410#lecture-article)
 * clickops to set up setting up emails when budget exceeded of %, forecasted etc
+
+[what is ec2](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26098112#lecture-article)
+* rent virtual machines on EC2, called EC2 instances.
+* store data on virtual drives known as EBS volumes.
+* distribute load across machines using Elastic Load Balancer.
+* scale services using an Auto Scaling Group (ASG).
+* choose the... 
+    * Operating System: Linux (most popular), Windows, or Mac OS.
+    * Compute Power: Number of CPU cores.
+    * Memory: Amount of RAM.
+    * Storage: Network-attached storage via EBS or EFS, or hardware-attached storage known as EC2 instance store.
+    * Network: Type of network interface, speed, and public IP configuration.
+    * Security: Firewall rules managed through security groups.
+* Bootstrapping - **EC2 User Data script** runs only once at the first start of the instance and never again. Always `sudo` as root user
+
+[ec2 hands on with linux and website](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26098122#lecture-article)
+* CLICKOPSSSSSSS
+* Launched an EC2 instance using Amazon Linux 2 AMI with a t2.micro instance type.
+* Configured key pairs for SSH access and set up security groups to allow SSH and HTTP traffic
+* Used EC2 user data to automatically install and start a web server on the instance
+* Learned how to start, stop, and terminate EC2 instances and understood the behavior of public and private IP addresses upon instance restart
+* `httpd`, start it and do a 1 liner html file
+
+[ec2 instance types](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26098128#lecture-article)
+* naming convention: instance class, instance generation, size within the instance class. e.g. `M5.2xlarge`, M, 5, and 2xlarge respectively
+* types of instance: 
+    * general purpose
+    * compute optimised - c - batch processing, media transcoding, high-performance web servers, high performance computing (HPC), machine learning, and dedicated gaming servers
+    * memory optimised - r, x1, z1 - relational and non-relational databases, in-memory databases, distributed web-scale cache stores like Elastic Cache, business intelligence applications, and real-time processing of big unstructured data
+    * storage optimised - i, g, h - high-frequency online transactional processing (OLTP) systems, relational and NoSQL databases, in-memory caches, data warehousing applications, distributed file systems, and search optimized workloads
+* compare with https://instances.vantage.sh/
+
+[security groups & classic ports overview](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26098134#lecture-article)
+* security group is a firewall, and only contain allow rules by IP or other security groups
+* exam ports: 
+    * Port 22 (SSH): Secure Shell, used to log into Linux EC2 instances.
+    * Port 21 (FTP): File Transfer Protocol, used to upload files to a file share.
+    * Port 22 (SFTP): Secure File Transfer Protocol, uses SSH for secure file uploads.
+    * Port 80 (HTTP): Access unsecured websites.
+    * Port 443 (HTTPS): Access secured websites, the standard nowadays.
+    * Port 3389 (RDP): Remote Desktop Protocol, used to log into Windows instances; Remember, port 22 is for SSH on Linux, and port 3389 is for RDP on Windows.
+
+```
+# don't do this lol
+{
+  "GroupName": "allow-all-traffic",
+  "Description": "Security group that allows all inbound and outbound traffic",
+  "SecurityGroupRules": [
+    {
+      "IpProtocol": "-1",
+      "CidrIpv4": "0.0.0.0/0",
+      "IsEgress": false
+    },
+    {
+      "IpProtocol": "-1",
+      "CidrIpv4": "0.0.0.0/0",
+      "IsEgress": true
+    }
+  ]
+}
+```
+
+[security groups hands on](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26098138#lecture-article)
+* Any time you see a timeout when trying to establish a connection to your EC2 instance—whether SSH, HTTP, or any other protocol—this is almost always caused by an EC2 security group misconfiguration
+* rule definition includes protocol, ip, port
+
+```
+{
+  "GroupName": "allow-ip-range",
+  "Description": "Security group for specific IP ranges",
+  "SecurityGroupRules": [
+    {
+      "IpProtocol": "tcp",
+      "FromPort": 22,
+      "ToPort": 22,
+      "CidrIpv4": "192.168.1.0/24",
+      "IsEgress": false
+    },
+    {
+      "IpProtocol": "tcp",
+      "FromPort": 80,
+      "ToPort": 80,
+      "CidrIpv4": "10.0.0.0/16",
+      "IsEgress": false
+    },
+    {
+      "IpProtocol": "tcp",
+      "FromPort": 443,
+      "ToPort": 443,
+      "CidrIpv4": "203.0.113.0/24",
+      "IsEgress": false
+    }
+  ]
+}
+```
+
+IN TF: 
+
+```
+resource "aws_security_group" "ip_range_sg" {
+  name        = "allow-ip-range"
+  description = "Security group for specific IP ranges"
+
+  # SSH from office network
+  ingress {
+    from_port   = 22
+    to_port     = 22
+    protocol    = "tcp"
+    cidr_blocks = ["192.168.1.0/24"]
+  }
+
+  # HTTP from internal network
+  ingress {
+    from_port   = 80
+    to_port     = 80
+    protocol    = "tcp"
+    cidr_blocks = ["10.0.0.0/16"]
+  }
+
+  # HTTPS from multiple ranges
+  ingress {
+    from_port   = 443
+    to_port     = 443
+    protocol    = "tcp"
+    cidr_blocks = [
+      "203.0.113.0/24",
+      "198.51.100.0/24"
+    ]
+  }
+
+  egress {
+    from_port   = 0
+    to_port     = 0
+    protocol    = "-1"
+    cidr_blocks = ["0.0.0.0/0"]
+  }
+}
+```
