--- a/02-ec2.md
+++ b/02-ec2.md
@@ -140,3 +140,135 @@ resource "aws_security_group" "ip_range_sg" {
   }
 }
 ```
+
+[ssh overview](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26098142#lecture-article)
+* either SSH or **ec2 instance connect**
+* i guess i can ignore the windows stuff but it's putty or other tooling
+* public ipv4 instance, and make sure security group is up for hands on `ec2-user@ipv4`, **default ec2 user set up by aws**
+
+[ec2 instance connect](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26098164#overview)
+* they create the ssh key for you lol
+* aws cli is also installed in the instance, but it doesn't have permissions if you set up appropriately
+
+[ec2 instances options](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26098170#lecture-article)
+* on demand, vs reserved (1 year or 3 years), ec2 savings plans, spot instances (up to 90% discounts), dedicated hosts (actual physical server) either on demand or reserved, dedicated instance, capacity reservation
+* On-demand: Like a resort where you come and pay full price whenever you want.
+* Reserved: You plan ahead and stay for one to three years, getting a good discount. Can buy or sell in marketplace. Can convert (**convertible reserved instance**) but this has a smaller discount.
+* Savings plan: You commit to spending a specific amount monthly, allowing flexibility in room types.
+* Spot instances: Last-minute discounts for empty rooms, but you can be asked to leave anytime.
+* Dedicated host: Booking the entire building of the resort, your own hardware.
+* Capacity reservation: Booking a room you may or may not use, but paying full price regardless.
+
+[ipv4 address charges in aws](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/46796945#lecture-article)
+* $3 bucks per month, since 2024 there's a charge
+* have some free tier (750hrs) in the first 12 months for ec2, but the rest do not have any free tier at all
+* ipv6 is free, though
+
+[spot instances and spot fleet]()
+
+[ec2 instances launch types hands on]()
+
+[private vs public ip](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/13528052#lecture-article)
+* private IPs connect to the internet via NAT devices and internet gateways
+* ec2 public ips change, to fix it use elastic IP, only one instance at a time, limited to 5 per aws acccount by default
+* **use load balancer without public IPs for best practice**; also possible to use route53 with appropriate records
+
+[ec2 placement groups](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/13528080#lecture-article)
+* physically, where your servers are located. not precise but can agar
+* 3 strategies: 
+    * Cluster: Instances are grouped together in a low-latency hardware setup **within a single availability zone**. Great networking (10gbs)
+    * Spread: Instances are spread across different hardware. Limit to 7 instances per AZ per placement group. **High availability**
+    * Partition: Instances are spread across multiple partitions, which are sets of racks within an availability zone. Basically if 1 rack fails, the rest are gonna be fine most likely
+
+[placement group hands on](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26118770#lecture-article)
+* clickopssssss
+
+[elastic network interfaces](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/18077955#lecture-article)
+* a **virtual network card**
+* attached on `eth0`
+* Each ENI can have the following attributes:
+    * A primary private IPv4 address.
+    * One or more secondary IPv4 addresses.
+    * One public IPv4
+    * One or more security groups
+    * A MAC address
+* ENIs can be moved around between instances in same AZ for failover
+* Bound to a specific AZ
+
+[eni hands on](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26118774#lecture-article)
+* clickopsssssss to create an ENI, moooooove the ENI arounnnnndddd to a different instance. instance can have multiple ENIs
+* a bit advanced, do we have to know this for the exam?
+* [extra reading](https://aws.amazon.com/blogs/aws/new-elastic-network-interfaces-in-the-virtual-private-cloud/)
+
+[ec2 hibernate](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/18104377#lecture-article)
+* can start, terminate, and hibernate (preserve whatever is in ram)
+* EC2 Hibernate preserves the in-memory RAM state by saving it to the root EBS volume, enabling faster instance boot times.
+* The root EBS volume must be encrypted and have sufficient space to store the RAM dump.
+* Hibernate supports many instance families and operating systems but excludes bare metal instances.
+* Hibernation is intended for use up to 60 days and is available for on-demand, reserved, and spot instances.
+
+# ec2 instance storage
+
+[ebs overview](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26098272#lecture-article)
+* network drive that can be attached to instances. bound to specific AZ. *network usb stick*!
+* root EBS volume is deleted when instance is terminated by default, but any other attached EBS volumes have attribute disabled by default. can disable deleion of root volume (it's available on clickops as a check box)
+
+[ebs hands on](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26098274#lecture-article)
+* note attribute for **delete on termination** is set at creation, and can be disabled
+
+[ebs snapshots](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26098276#lecture-article) + [ebs snapshots hands on](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26098278#lecture-article)
+* backup of EBS, recommended to delete from EC2, but don't have to
+* can copy snapshot across regions and AZ
+* archive the snapshot for up to 75% savings but delay 24-72h for restore
+* recycle bin can retain for up to 1 year (customisable retention period)
+* fast snapshot restore - more $ but no latency on first use
+
+[ami overview](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26098280#lecture-article) + [hands on](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26098284#lecture-article)
+* amazon machine image... can either use aws's or create our own. faster boot and configuration time
+* amis built for specific region, then copy it across regions
+* select ec2 instance and customise it, then stop it, then build (creates EBS snapshots behind the scenes)
+
+[ec2 instance store](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26098288#lecture-article)
+* ebs volumes - network drives VS ec2 instance store - high performance hardware disk PHYSICALLY ATTACHED
+* caveat - **if. you stop or terminate your ec2 instance that has such a store, the storage will be lost**
+* ideal for buffers, caches, scratch data, machine learning (waves hands)
+* example has about 10^6 difference in IOPs in favour of instance store vs EBS which makes sense, networking is latency
+
+[ebs volume types](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26098296#lecture-article)
+* defined by **size, throughput, iops**
+* can only boot from gp2/3, io1/2
+* gp2 and gp3: **General purpose** SSD volumes that balance price and performance for a wide variety of workloads. These have been used throughout this course. 
+* io1 and io2 Block Express: **Highest-performance SSD volumes** designed for mission-critical, low-latency, and high-throughput workloads.
+* st1: Low-cost HDD volumes designed for frequently accessed, **throughput-intensive workloads**.
+* sc1: **Lowest-cost** HDD volumes designed for less frequently accessed workloads - **archive data**
+
+[ebs multi-attach](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26098298#lecture-article)
+* same EBS volume to multiple EC2 instances, **only io1/io2**. full readwrite permissions
+* use cases: 
+    * Higher application availability, such as in clustered Linux applications like Teradata. 
+    * Applications that require managing concurrent write operations.
+* up to 16 EC2 instances at a time
+* must use file system that is cluster aware
+
+[ebs encryption](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/13528122#lecture-article)
+* uses aes-256
+* data at rest is encrypted, and all data in transit between instance and volume is encrypted; snapshots are encrypted
+* to encrypte existing ebs volume, snapshot it and THEN enable encryption, and create a new ebs volume from the snapshot and attach it to the instance; shortcut is select appropriate kms key
+
+[efs](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/13528128#lecture-article) and [hands on](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/13528130#lecture-article)
+* managed network file system
+* pay per use
+* set performance mode upon creation (general purpose vs max io), throughput modes: bursting, provisioned, elastic
+* set file system type: regional vs one zone (set AZ)
+* storage tiers: standard, EFS infrequent acess, archive. can configure **lifecycle policies**
+* can be mounted on many ec2 instances and across availability zones
+* only linux
+* **use cases**: content management, web serving, data sharing, and applications like WordPress. Internally, it uses the NFS protocol. To control access, you must configure a security group.
+
+[efs vs ebs](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/13528138#lecture-article)
+* EBS volumes are attached to a single EC2 instance at a time and are locked to a specific Availability Zone (AZ).
+* EBS IO performance varies by volume type, with gp3 and io1 allowing independent IO scaling.
+Migrating EBS volumes across AZs requires creating and restoring snapshots.
+* EFS is a network file system designed to be shared across multiple instances and AZs, **supporting POSIX** and suitable for Linux workloads.
+* EFS generally has a higher cost but offers storage tiers for cost optimization.
+* Instance store volumes are physically attached to EC2 instances and data is lost if the instance is terminated.
