dev: advanced s3 (ish)

--- a/05-s3.md
+++ b/05-s3.md
@@ -43,7 +43,7 @@ resource "aws_s3_bucket_public_access_block" "lambda_response_bucket_pab" {
 * `S3 Batch Replication` to replicate existing objects
 * replication rules
 
-[storage classes overview](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/13528350#lecture-article)
+[storage classes overview](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/13528350#lecture-article) + [hands on](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/23743396#lecture-article)
 * Amazon S3 Standard - General Purpose
 * Amazon S3 Infrequent Access (Standard-IA) - Offers 99.9% availability, cost on retrieval
 * Amazon S3 One Zone-Infrequent Access (One Zone-IA) - Offers 99.5% availability
@@ -52,3 +52,37 @@ resource "aws_s3_bucket_public_access_block" "lambda_response_bucket_pab" {
 * Glacier Deep Archive - standard (12h) vs bulk (48h), 180 days min storage duration
 * Amazon S3 Intelligent-Tiering
 * 11 9s durability -  if you store 10 million objects, you can expect to lose only one object every 10,000 years on average; availability depends on the storage class
+
+[s3 lifecycle rules with analytics](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/13528352#lecture-article) + [hands on](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/23743416#lecture-article)
+* not everything is possible, generally if it's standard it can go anywhere, but deep archive cannot come back for e.g. once moved into a lower tier, cannot come back
+* lifecycle rules (can be applied to **buckets, specific prefixes or object tags**)
+    * transition actions
+    * expiration actions
+    * incomplete multipart actions
+* s3 analytics - recommendations for transitions between Standard and Standard IA storage classes. does not support one zone ia or galcier, generates a csv report with stats and recs
+
+[s3 requester pays](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/26099260#lecture-article)
+* bucket owners pay for storage + data transfer costs
+* enabling requester pays - which makes the requester pay for **networking costs**. user *must* be authenticated in AWS
+
+[s3 event notifications](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/19736478#lecture-article)
+* use case - trigger automated workflows
+* send to sns topic, sqs queue, lambda function. unlimited s3 event notifications. delivery takes seconds to minutes (so... slow)
+* need to configure appropriate iam permissions -- **resource policies** directly attached to the topic queue or function
+* amazon eventbridge also can - all events are sent to eventbridge anyway. **advanced filtering**, send to **multiple destinations**, **event archiving, replay, more reliable delivery**.
+* instead of directly writing to sqs queue from lambda, i can probably lambda -> save to s3 -> trigger event either directly to lambda or into an sqs queue
+
+[s3 performance](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/18078239#lecture-article)
+* each prefix in an S3 bucket supports:
+    * 3,500 PUT, COPY, POST, or DELETE requests per second
+    * 5,500 GET or HEAD requests per second
+* ***s3 transfer acceleration*** -  **increases upload and download speeds by routing data through AWS edge locations**. basically within aws it's fast, minimise edge latency so can reduce bottleneck
+* ***s3 byte range fetches*** - allows parallelisation / partial retrieval of the file / speed up downloads
+
+[s3 batch operations](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/33878726#lecture-article)
+* Modify all the object metadata and properties of many S3 objects at once.
+* Copy objects between S3 buckets as a batch operation.
+* Encrypt all unencrypted objects in your S3 buckets.
+* Modify Access Control Lists (ACLs) or tags for multiple objects.
+* Restore many objects simultaneously from S3 Glacier.
+* Invoke a Lambda function to perform custom actions on every object in the batch.
