dev: done with s3...

--- a/05-s3.md
+++ b/05-s3.md
@@ -80,9 +80,84 @@ resource "aws_s3_bucket_public_access_block" "lambda_response_bucket_pab" {
 * ***s3 byte range fetches*** - allows parallelisation / partial retrieval of the file / speed up downloads
 
 [s3 batch operations](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/33878726#lecture-article)
-* Modify all the object metadata and properties of many S3 objects at once.
-* Copy objects between S3 buckets as a batch operation.
-* Encrypt all unencrypted objects in your S3 buckets.
-* Modify Access Control Lists (ACLs) or tags for multiple objects.
-* Restore many objects simultaneously from S3 Glacier.
-* Invoke a Lambda function to perform custom actions on every object in the batch.
+* WHAT
+    * Modify all the object metadata and properties of many S3 objects at once.
+    * Copy objects between S3 buckets as a batch operation.
+    * Encrypt all unencrypted objects in your S3 buckets.
+    * Modify Access Control Lists (ACLs) or tags for multiple objects.
+    * Restore many objects simultaneously from S3 Glacier.
+    * Invoke a Lambda function to perform custom actions on every object in the batch.
+* Why use S3 Batch Operations instead of scripting these tasks yourself?
+    * Management of retries is handled automatically.
+    * You can track the progress of the batch job.
+    * Completion notifications can be sent upon job completion.
+    * Detailed reports are generated for auditing and verification.
+* S3 inveotry and then athena to get list of objects
+
+[s3 storage lens](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/42878778#lecture-article)
+* got default dashboard, can export reports / metrics in csv/parrquet and available for different retention period
+* 28 free metrics available, rest paid. default retention 14 days, paid retention up to 15 months
+
+[s3 encryption](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/13528318#overview) + [hands on](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/23743320#lecture-article)
+* Server-side encryption (SSE), which has multiple flavors:
+    * SSE-S3: Server-side encryption with Amazon S3-managed keys. Never have access to key, AES-256. Set header `x-amz-server-side-encryption: AES256`. Enabled by default for new buckets and objects
+    * SSE-KMS: Server-side encryption with AWS Key Management Service (KMS) keys. Set header  `x-amz-server-side-encryption: aws:kms`. 
+        * When you upload or download files from Amazon S3, you need to leverage a KMS key, which has its own APIs such as GenerateDataKey and Decrypt. Each API call counts towards the KMS quotas of API calls per second, which ranges between 5,000 and 30,000 requests per second depending on the region. These quotas can be increased using the Service Quotas Console.
+    * SSE-C: Server-side encryption with customer-provided keys. After use, key is discarded by AWS. Need to keep the key yourself to decrypt stuff. Must use HTTPS obvs
+* Client-side encryption, where you encrypt everything client-side before uploading to Amazon S3.
+* Encryption in transit (HTTPS) - can be forced with bucket policy
+
+```
+{
+  "Version": "2012-10-17",
+  "Statement": [
+    {
+      "Effect": "Deny",
+      "Principal": "*",
+      "Action": "s3:GetObject",
+      "Resource": "arn:aws:s3:::YOUR_BUCKET_NAME/*",
+      "Condition": {
+        "Bool": {"aws:SecureTransport": "false"}
+      }
+    }
+  ]
+}
+```
+
+[s3 default encryption](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/13531242#lecture-article)
+* **By default, all S3 buckets have server-side encryption with Amazon S3-managed keys (SSE-S3) enabled. This default encryption is automatically applied to new objects uploaded to these buckets.**
+* Bucket policy that can deny things not appropriately encrypted - policies always evaluated before default encryption settings
+
+[cross origin resource sharing](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/13528324#lecture-article) + [hands on](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/19736418#lecture-article)
+* An origin is defined by a scheme (protocol), host (domain), and port. For example, consider the URL https://www.example.com. Here, the implied port is 443 for HTTPS, the protocol is HTTPS itself, and the domain is www.example.com.
+* Same origin, same scheme + host + port. **requests between different origins require explicit permission via CORS headers.**
+* **When a client makes a cross-origin request to an Amazon S3 bucket, the bucket must have the correct CORS headers enabled to allow the request. This is a common exam question.**
+
+[mfa delete](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/13528342#lecture-article) + [hands on](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/23743360#lecture-article)
+* generates a code that must be entered into Amazon S3 before performing important operations, such as permanently deleting object versions or suspending versioning
+* enabling MFA delete **must be done using aws cli**
+
+[s3 access logs](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/13714590#lecture-article) + [hands on](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/23743440#lecture-article)
+* target logging buckets must be in the same AWS region as the buckets being monitored, enable access logging, specific format for these logs - [https://docs.aws.amazon.com/AmazonS3/latest/userguide/LogFormat.html](https://docs.aws.amazon.com/AmazonS3/latest/userguide/LogFormat.html)
+* don't have logging bucket same as monitored bucket - it will create a loop and you will die
+
+[s3 pre-signed urls](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/13528348#lecture-article) + [hands on](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/23743384#lecture-article)
+*  user who receives that URL inherits the permissions of the user who generated it. This applies for both GET and PUT operations
+* cli up to 168 hours, console up to 12 hours expiry
+* non public bucket can haz shared file with everyone for a period of time
+
+[s3 glacier vault lock](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/18078251#lecture-article)
+* write once read many - create a vault lock policy, lock the policy for future edits
+* **s3 object lock** - similar but not quite the same. **compliance mode** - cannot overwrite or delete by ANY user, no change nuffing; **governance mode** - iam can grant some users special permission to do stuff. also can place a legal hold, with user iam permission `s3:PutObjectLegalHold`
+
+[s3 access points](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/33878720#lecture-article)
+* cos bucket policy suckssssss and is hard to scale for complexity.... security management is shifted from a single bucket policy to multiple access point policies
+* access point policy, which resembles an S3 bucket policy and grants read and write access to the finance prefix
+* points can be defined to be privately accessible through a VPC origin; VPC endpoint has its own policy which must allow access to target buckets and access points
+
+[s3 object lambda](https://www.udemy.com/course/aws-certified-solutions-architect-associate-saa-c03/learn/lecture/36228836#lecture-article)
+* modify data dynamically without duplicating storage
+* uses access points connected to lambda, use cases: 
+    * Redacting personally identifiable information (PII) for analytics or non-production environments.
+    * Converting data formats, for example, from XML to JSON.
+    * Performing any kind of transformation, such as resizing and watermarking images on the fly, where the watermark is specific to the user who requests the object.
